fix(toolbar): Set align-items to center to fix section alignment in IE/Edge

--- a/packages/mdc-toolbar/mdc-toolbar.scss
+++ b/packages/mdc-toolbar/mdc-toolbar.scss
@@ -56,7 +56,7 @@
   &__section {
     display: inline-flex;
     flex: 1;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
     min-width: 0;
     height: 100%;
